# serializer version: 1
# name: test_air_con
  dict({
    'current_humidity': 60.9,
    'current_temperature': 24.8,
    'fan_mode': 'auto',
    'fan_modes': list([
      'auto',
      'high',
      'medium',
      'low',
    ]),
    'friendly_name': 'Air Conditioning',
    'hvac_action': <HVACAction.COOLING: 'cooling'>,
    'hvac_modes': list([
      <HVACMode.OFF: 'off'>,
      <HVACMode.AUTO: 'auto'>,
      <HVACMode.HEAT: 'heat'>,
      <HVACMode.COOL: 'cool'>,
      <HVACMode.HEAT_COOL: 'heat_cool'>,
      <HVACMode.DRY: 'dry'>,
      <HVACMode.FAN_ONLY: 'fan_only'>,
    ]),
    'max_temp': 31.0,
    'min_temp': 16.0,
    'preset_mode': 'auto',
    'preset_modes': list([
      'away',
      'home',
      'auto',
    ]),
    'supported_features': <ClimateEntityFeature: 409>,
    'target_temp_step': 1,
    'temperature': 17.8,
  })
# ---
# name: test_heater
  dict({
    'current_humidity': 45.2,
    'current_temperature': 20.6,
    'friendly_name': 'Baseboard Heater',
    'hvac_action': <HVACAction.IDLE: 'idle'>,
    'hvac_modes': list([
      <HVACMode.OFF: 'off'>,
      <HVACMode.AUTO: 'auto'>,
      <HVACMode.HEAT: 'heat'>,
    ]),
    'max_temp': 31.0,
    'min_temp': 16.0,
    'preset_mode': 'auto',
    'preset_modes': list([
      'away',
      'home',
      'auto',
    ]),
    'supported_features': <ClimateEntityFeature: 401>,
    'target_temp_step': 1,
    'temperature': 20.5,
  })
# ---
# name: test_smartac_with_fanlevel_vertical_and_horizontal_swing
  dict({
    'current_humidity': 70.9,
    'current_temperature': 24.3,
    'fan_mode': 'high',
    'fan_modes': list([
      'high',
      'medium',
      'auto',
      'low',
    ]),
    'friendly_name': 'Air Conditioning with fanlevel',
    'hvac_action': <HVACAction.HEATING: 'heating'>,
    'hvac_modes': list([
      <HVACMode.OFF: 'off'>,
      <HVACMode.AUTO: 'auto'>,
      <HVACMode.HEAT: 'heat'>,
      <HVACMode.COOL: 'cool'>,
      <HVACMode.HEAT_COOL: 'heat_cool'>,
      <HVACMode.DRY: 'dry'>,
      <HVACMode.FAN_ONLY: 'fan_only'>,
    ]),
    'max_temp': 31.0,
    'min_temp': 16.0,
    'preset_mode': 'auto',
    'preset_modes': list([
      'away',
      'home',
      'auto',
    ]),
    'supported_features': <ClimateEntityFeature: 441>,
    'swing_modes': list([
      'vertical',
      'horizontal',
      'both',
      'off',
    ]),
    'target_temp_step': 1.0,
    'temperature': 25.0,
  })
# ---
# name: test_smartac_with_swing
  dict({
    'current_humidity': 42.3,
    'current_temperature': 20.9,
    'fan_mode': 'auto',
    'fan_modes': list([
      'auto',
      'high',
      'medium',
      'low',
    ]),
    'friendly_name': 'Air Conditioning with swing',
    'hvac_action': <HVACAction.HEATING: 'heating'>,
    'hvac_modes': list([
      <HVACMode.OFF: 'off'>,
      <HVACMode.AUTO: 'auto'>,
      <HVACMode.HEAT: 'heat'>,
      <HVACMode.COOL: 'cool'>,
      <HVACMode.HEAT_COOL: 'heat_cool'>,
      <HVACMode.DRY: 'dry'>,
      <HVACMode.FAN_ONLY: 'fan_only'>,
    ]),
    'max_temp': 30.0,
    'min_temp': 16.0,
    'preset_mode': 'auto',
    'preset_modes': list([
      'away',
      'home',
      'auto',
    ]),
    'supported_features': <ClimateEntityFeature: 441>,
    'swing_modes': list([
      'on',
      'off',
    ]),
    'target_temp_step': 1.0,
    'temperature': 20.0,
  })
# ---
